-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.8.0-rc, Qt Creator 3.1.0-rc1
-
None
-
Win 7 64bit
-
8e118e9d5e (qt-creator/qt-creator/master) 8e118e9d5e (qt-creator/qt-creator/9.0)
When rewrapping a paragraph in a C comment used to describe a function an wrong '@' sign is added.
If you start with:
Bar.java
/**
* @brief function is a function that calculates some result from the parameter d, but does not return the result
* @param d is the parameter that is used in calculation.
*/
void function(double d);
and you place your cursor behind the @brief on function and press CTRL+e,r you end up in:
Bar.java
/**
* @brief function is a function that calculates some result from the
* @parameter d, but does not return the result param d is the parameter
* @that is used in calculation.
*/
void function(double d);
That is clearly wrong.
You would expect
Bar.java
/**
* @brief function is a function that calculates some result from the
* parameter d, but does not return the result
* @param d is the parameter that is used in calculation.
*/
void function(double d);
respecting the doxygen tags.
- is cloned by
-
QTCREATORBUG-31067 Rewrap Pragraph in doxygen comment does not respect indenting scheme
-
- Reported
-